Fix MemberInviteModal heading

--- a/packages/webapp/src/i18n/locales/en.json
+++ b/packages/webapp/src/i18n/locales/en.json
@@ -631,7 +631,7 @@
     "success": "Access removed successfully"
   },
   "MemberInviteModal": {
-    "heading": "Invite member",
+    "heading": "Invite {{member}}",
     "email": "Email",
     "emailPlaceholder": "member@example.com",
     "invite": "Send invitation",
