--- a/packages/webapp/src/i18n/locales/en.json
+++ b/packages/webapp/src/i18n/locales/en.json
@@ -1001,11 +1001,9 @@
     "desc2": "If an active user is added during the month, the amount is prorated between the current date and the end of the billing cycle and will be added to your next invoice",
     "desc3": "If an active user is deleted during the month, a credit note for the time spent during the month will be applied to your next invoice"
   },
-  "SubscriptionReachedMemberLimitModal": {
-    "title": "Oops, you have reached the maximum number of members for your plan!",
-    "limitReached": "You can upgrade your plan to increase the number of members in your team.",
-    "upgradePlan": "Passer au plan supérieur",
-    "hide": "Masquer"
+  "SubscriptionLimitsAlert": {
+    "notEnoughSeats": "Your current subscription plan has a limit of {{limit}} active members and doesn't have enough seats available.",
+    "upgradePlan": "Upgrade to a higher plan"
   },
   "SubscriptionPlans": {
     "currentPlan": "Current plan",
